--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v4",
-  "description": "Personal Website V4",
+  "description": "Sudhanva Narayana's Personal Website",
   "version": "1.0.0",
   "author": "Brittany Chiang <brittany.chiang@gmail.com>",
   "repository": {
